--- a/bengaluru.tex
+++ b/bengaluru.tex
@@ -37,9 +37,9 @@
 \colorlet{body}{black!80!white}
 
 % Command definitions from altacv.cls
-\newcommand{\itemmarker}{•}
+\newcommand{\itemmarker}{{\small\textbullet}}
 \newcommand{\ratingmarker}{\faCircle}
-\renewcommand{\itemmarker}{•}
+\renewcommand{\itemmarker}{{\small\textbullet}}
 \renewcommand{\ratingmarker}{\faCircle}
 
 \setlist{leftmargin=*,labelsep=0.5em,nosep,itemsep=0.25\baselineskip,after=\vskip0.25\baselineskip}
@@ -144,19 +144,19 @@ CGPA - 7.20/10
 {\color{heading}\LARGE\bfseries\MakeUppercase{Skills}}\\[-1ex]%
 {\color{heading}\rule{\linewidth}{2pt}\par}\medskip
 \cvtag{Prompt Engineering}
-\cvtag{Programme Mgmt}
+\cvtag{Meta Marketing}
 \cvtag{Growth Hacking}
 \cvtag{GTM Strategy}
 \cvtag{Market Research}
 \cvtag{Strategic Planning}
-\cvtag{Risk Analysis}
+\cvtag{Email Marketing}
 \cvtag{Data-Driven Decision Making}
-\cvtag{Stakeholder Mgmt}
+\cvtag{Sales and Business Development}
 \cvtag{Cold Outreach Automation}
-\cvtag{Agile Methodologies}
+\cvtag{Lead Generation and Qualification}
 \cvtag{Negotiation}
 \cvtag{Customer Success}
-\cvtag{Data Analytics}
+\cvtag{Digital Marketing}
 \cvtag{AB Testing}
 \cvtag{KPI Tracking}
 \cvtag{Team player}
@@ -226,7 +226,7 @@ CGPA - 7.20/10
   }%
 
 \cvname{\textcolor{SlateGrey}{SHIKHAR SHARMA}}
-\cvtagline{Technical Programme Manager | Data-Driven Growth & Analytics Program Delivery}
+\cvtagline{Product and Growth ( Ex-Founder | Driving Growth in Fintech \& D2C)}
 
 \personalinfo{%
   \phone {+919084895099}
@@ -244,7 +244,7 @@ CGPA - 7.20/10
 
 \cvevent{\textbf{Shopdeck} {\small (D2C Enabler)}}{Program Manager Business Growth}{November 2024 - Present}{}
 \begin{itemize}
-\item  Managed a INR 5M program, coordinating tech & design to meet KPIs & reporting progress to stakeholders.
+\item  Implemented and led Meta Marketing for lead generation, driving \textbf{5,500+} monthly leads with a budget of \textbf{INR 5 Million}
 \item Achieved a \textbf{50\% MoM} increase in lead conversion through the implementation of new marketing strategies.
 \item Developed dashboards, analyzed marketing data to drive strategic decisions and presented key insights to stakeholders
 \item Designed Amazon products scraping engine for data extraction, processing \textbf{6.4M} products, generating \textbf{30K+} seller leads
@@ -254,7 +254,7 @@ CGPA - 7.20/10
 
 \cvevent{\textbf{BharatX YC-22} {\small (Checkout Financing Fintech)}}{Consultant Product Growth (Part-time)}{July 2024 -- Oct 2024}  {Bengaluru}
 \begin{itemize}
-\item Drove a tech automation program improving efficiency by 95% & stakeholder conversions by 25% through strategic coordination.
+\item Developed cold outreach automation, achieved a \textbf{45\% }reply rate and a \textbf{25\%} demo conversion rate, which reduced manual effort by \textbf{95\% }
 \item Managed the renegotiation of agreements with \textbf{250+ top D2C merchants} after the RBI shutdown of our NBFC partner
 \item Automated agreement generation and led email/WhatsApp campaigns, achieving an \textbf{87\% response rate} 
 \end{itemize}
@@ -281,4 +281,4 @@ drastically reducing credit fraud by \textbf{2 Cr per month}
 \item Made the company \textbf{profitable in 3 months}, generating \textbf{INR 5L}
 \end{itemize}
 
-\end{document}
+\end{document} 
