--- a/turno_linkedin.tex
+++ b/turno_linkedin.tex
@@ -146,21 +146,21 @@ CGPA - 7.20/10
 {\color{heading}\rule{\linewidth}{2pt}\par}\medskip
 
 \cvtag{Prompt Engineering}
-\cvtag{Lending Tech}
+\cvtag{Meta Marketing}
 \cvtag{Growth Hacking}
 \cvtag{GTM Strategy}
 \cvtag{Market Research}
 \cvtag{Strategic Planning}
-\cvtag{User Research}
+\cvtag{Email Marketing}
 \cvtag{Data-Driven Decision Making}
-\cvtag{Fintech & Lending Products}
-\cvtag{Product Roadmapping}
-\cvtag{User Stories & Requirements}
+\cvtag{Sales and Business Development}
+\cvtag{Cold Outreach Automation}
+\cvtag{Lead Generation and Qualification}
 \cvtag{Negotiation}
 \cvtag{Customer Success}
 \cvtag{Digital Marketing}
 \cvtag{AB Testing}
-\cvtag{User Flows}
+\cvtag{KPI Tracking}
 \cvtag{Team player}
 
 \bigskip
@@ -226,7 +226,7 @@ CGPA - 7.20/10
 }
 
 \cvname{\textcolor{SlateGrey}{SHIKHAR SHARMA}}
-\cvtagline{Product Manager | Fintech & Lending Specialist | IIT Kanpur}
+\cvtagline{Product and Growth ( Ex-Founder | Driving Growth in Fintech \& D2C)}
 
 \personalinfo{%
   \phone {+919084895099}
@@ -244,18 +244,18 @@ CGPA - 7.20/10
 
 \cvevent{\textbf{Shopdeck} {\small (D2C Enabler)}}{Program Manager Business Growth}{November 2024 - Present}{}
 \begin{itemize}
-\item Drove customer acquisition via Meta, analyzing feedback from 5,500+ leads/month to inform product strategy
+\item  Implemented and led Meta Marketing for lead generation, driving \textbf{5,500+} monthly leads with a budget of \textbf{INR 5 Million}
 \item Achieved a \textbf{50\% MoM} increase in lead conversion through the implementation of new marketing strategies.
 \item Developed dashboards, analyzed marketing data to drive strategic decisions and presented key insights to stakeholders
 \item Designed Amazon products scraping engine for data extraction, processing \textbf{6.4M} products, generating \textbf{30K+} seller leads
-\item Defined requirements & led tech team to build a data engine, sourcing 10M accounts for market research & product outreach
+\item  Spearheaded strategy for a WhatsApp scraping, enabling extraction of \textbf{10 million} business accounts; guided tech team in implementation
 \item Collaborated with tech, design, business and product teams for successful implementation of Scraping and Marketing projects
 \end{itemize}
 
 \cvevent{\textbf{BharatX YC-22} {\small (Checkout Financing Fintech)}}{Consultant Product Growth (Part-time)}{July 2024 -- Oct 2024}  {Bengaluru}
 \begin{itemize}
 \item Developed cold outreach automation, achieved a \textbf{45\% }reply rate and a \textbf{25\%} demo conversion rate, which reduced manual effort by \textbf{95\% }
-\item Collaborated with 250+ merchants to align on new loan terms, translating business needs into product requirements
+\item Managed the renegotiation of agreements with \textbf{250+ top D2C merchants} after the RBI shutdown of our NBFC partner
 \item Automated agreement generation and led email/WhatsApp campaigns, achieving an \textbf{87\% response rate} 
 \end{itemize}
 
@@ -281,4 +281,4 @@ drastically reducing credit fraud by \textbf{2 Cr per month}
 \item Made the company \textbf{profitable in 3 months}, generating \textbf{INR 5L}
 \end{itemize}
 
-\end{document}
+\end{document} 
