--- a/turno_linkedin.tex
+++ b/turno_linkedin.tex
@@ -152,6 +152,8 @@ CGPA - 7.20/10
 \cvtag{Market Research}
 \cvtag{Strategic Planning}
 \cvtag{Email Marketing}
+\cvtag{Fintech \& Lending Products}
+\cvtag{User Stories \& Requirements}
 \cvtag{Data-Driven Decision Making}
 \cvtag{Sales and Business Development}
 \cvtag{Cold Outreach Automation}
@@ -226,7 +228,7 @@ CGPA - 7.20/10
 }
 
 \cvname{\textcolor{SlateGrey}{SHIKHAR SHARMA}}
-\cvtagline{Product and Growth ( Ex-Founder | Driving Growth in Fintech \& D2C)}
+\cvtagline{Product Manager | Fintech \& Lending Specialist | IIT Kanpur}
 
 \personalinfo{%
   \phone {+919084895099}
@@ -247,7 +249,7 @@ CGPA - 7.20/10
 \item  Implemented and led Meta Marketing for lead generation, driving \textbf{5,500+} monthly leads with a budget of \textbf{INR 5 Million}
 \item Achieved a \textbf{50\% MoM} increase in lead conversion through the implementation of new marketing strategies.
 \item Developed dashboards, analyzed marketing data to drive strategic decisions and presented key insights to stakeholders
-\item Designed Amazon products scraping engine for data extraction, processing \textbf{6.4M} products, generating \textbf{30K+} seller leads
+\item Defined requirements \& led tech team to build a data engine, sourcing 10M accounts for market research \& product outreach
 \item  Spearheaded strategy for a WhatsApp scraping, enabling extraction of \textbf{10 million} business accounts; guided tech team in implementation
 \item Collaborated with tech, design, business and product teams for successful implementation of Scraping and Marketing projects
 \end{itemize}
