--- a/bitespeed.tex
+++ b/bitespeed.tex
@@ -145,21 +145,21 @@ CGPA - 7.20/10
 {\color{heading}\LARGE\bfseries\MakeUppercase{Skills}}\\[-1ex]%
 {\color{heading}\rule{\linewidth}{2pt}\par}\medskip
 
-\cvtag{Product Roadmap}
+\cvtag{Prompt Engineering}
 \cvtag{Meta Marketing}
 \cvtag{Growth Hacking}
 \cvtag{GTM Strategy}
 \cvtag{Market Research}
 \cvtag{Strategic Planning}
-\cvtag{Data Analysis}
+\cvtag{Email Marketing}
 \cvtag{Fintech \& Lending Products}
 \cvtag{User Stories \& Requirements}
 \cvtag{Data-Driven Decision Making}
-\cvtag{User Interviews}
-\cvtag{PRD Specification}
-\cvtag{Competitive Analysis}
+\cvtag{Sales and Business Development}
+\cvtag{Cold Outreach Automation}
+\cvtag{Lead Generation and Qualification}
 \cvtag{Negotiation}
-\cvtag{User Empathy}
+\cvtag{Customer Success}
 \cvtag{Digital Marketing}
 \cvtag{AB Testing}
 \cvtag{KPI Tracking}
@@ -228,7 +228,7 @@ CGPA - 7.20/10
 }
 
 \cvname{\textcolor{SlateGrey}{SHIKHAR SHARMA}}
-\cvtagline{Product Manager | Ex-Founder with D2C & SaaS Product Experience}
+\cvtagline{Product Manager | Fintech \& Lending Specialist | IIT Kanpur}
 
 \personalinfo{%
   \phone {+919084895099}
@@ -247,7 +247,7 @@ CGPA - 7.20/10
 \cvevent{\textbf{Shopdeck} {\small (D2C Enabler)}}{Program Manager Business Growth}{November 2024 - Present}{}
 \begin{itemize}
 \item  Implemented and led Meta Marketing for lead generation, driving \textbf{5,500+} monthly leads with a budget of \textbf{INR 5 Million}
-\item Drove 50\% MoM lead conversion boost via data-driven experimentation and strategic funnel optimizations.
+\item Achieved a \textbf{50\% MoM} increase in lead conversion through the implementation of new marketing strategies.
 \item Developed dashboards, analyzed marketing data to drive strategic decisions and presented key insights to stakeholders
 \item Defined requirements \& led tech team to build a data engine, sourcing 10M accounts for market research \& product outreach
 \item  Spearheaded strategy for a WhatsApp scraping, enabling extraction of \textbf{10 million} business accounts; guided tech team in implementation
@@ -256,7 +256,7 @@ CGPA - 7.20/10
 
 \cvevent{\textbf{BharatX YC-22} {\small (Checkout Financing Fintech)}}{Consultant Product Growth (Part-time)}{July 2024 -- Oct 2024}  {Bengaluru}
 \begin{itemize}
-\item Built an automated outreach system to gather market feedback, achieving a 45\% reply rate for product insights.
+\item Developed cold outreach automation, achieved a \textbf{45\% }reply rate and a \textbf{25\%} demo conversion rate, which reduced manual effort by \textbf{95\% }
 \item Managed the renegotiation of agreements with \textbf{250+ top D2C merchants} after the RBI shutdown of our NBFC partner
 \item Automated agreement generation and led email/WhatsApp campaigns, achieving an \textbf{87\% response rate} 
 \end{itemize}
@@ -283,4 +283,4 @@ drastically reducing credit fraud by \textbf{2 Cr per month}
 \item Made the company \textbf{profitable in 3 months}, generating \textbf{INR 5L}
 \end{itemize}
 
-\end{document}
+\end{document} 
